[package]
name         = "esptest"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.76.0"

[dependencies]
defmt            = "0.3.8"
defmt-rtt        = "0.4.1"
embassy-executor = { version = "0.6.0",  features = ["defmt"] }
embassy-time     = { version = "0.3.2",  features = ["generic-queue-8"] }
esp-backtrace    = { version = "0.14.0", features = ["esp32c6", "defmt", "exception-handler", "panic-handler"] }
esp-hal          = { git = "https://github.com/esp-rs/esp-hal", rev = "d71434adfb7573c267d4d41a4304a2c556d59231", features = ["esp32c6", "defmt"] }
esp-hal-embassy  = { git = "https://github.com/esp-rs/esp-hal", rev = "d71434adfb7573c267d4d41a4304a2c556d59231", features = ["esp32c6", "defmt"] }
esp-println      = { version = "0.11.0", features = ["esp32c6", "defmt-espflash"] }

[profile.release]
debug         = true  # Debug info is useful, and does not affect the size of the final binary
codegen-units = 1     # LLVM can perform better optimizations using a single thread
lto           = "fat" # Attempt to perform optimizations across all crates within the dependency graph
opt-level     = "s"   # Optimize for binary size, but keep loop vectorization enabled
